<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tawfeequal Quran</string>
    <string name="app_title">All about Quran</string>
     <string name="copy_right">COPYRIGHT@2015-2018 IMROKRAFT SOLUTION PVT LTD.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quran">Quran</string>
    <string name="adkar">Adkar</string>
    <string name="prayer_time">Prayer Time</string>
    <string name="zakt_calculator">Zakkath Calculator</string>
    <string name="about_app">About the App</string>
    <string name="my_quran">My Quran</string>
    <string name="cash_in_bank">Cash in Bank in Savings Account</string>
    <string name="cash_in_hand">Cash in Hand</string>
    <string name="price_GM">Price/GM</string>
    <string name="calculate">Calculate</string>
    <string name="sura_names">Sura Names</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="zohr">Zohr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="morning_dua">Morning Supplications</string>
    <string name="eve_dua">Evening Supplications</string>
    <string name="dua_sleep">Dua before Sleep</string>
    <string name="wakingup_dua">Waking up Supplications</string>
    <string name="enter_mosque">Dua to enter the Mosque</string>
    <string name="after_prayer">Supplicatons after Prayer</string>
    <string name="about_app_details">This application contains all the chapters of the Quran, Adkar, Prayer time and Zakkat Calculator. Adkar help muslims read their daily prayers. And provides islamic prayer times. Also calculation of Zakat varies for different assets and liabilities.</string>

</resources>