<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bodyy"
    android:orientation="vertical"
    android:weightSum="4.0"
    tools:context="com.example.myquran.HomePage" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:gravity="center"
        android:text="@string/zakt_calculator"
        android:textColor="#663737"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cash_in_hand"
        android:textSize="18sp"
        android:layout_weight="0.50"
        android:textColor="#E0DA7C"
        android:layout_marginTop="8dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_weight="0.50"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="number">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:textColor="#E0DA7C"
        android:text="@string/cash_in_bank"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:text="@string/price_GM"
        android:textColor="#E0DA7C"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:ems="10" 
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:weightSum="1.0"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button123"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="#406B5919"
            android:onClick="calculate"
            android:text="@string/calculate"
            android:layout_marginRight="8dp"
            android:textColor="#E0DA7C" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="#406B5919"
            android:gravity="center"
            android:textColor="#E0DA7C"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>